12-monicahq/monicahq-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: monicahq-ingress
  annotations:
#    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    ingress.kubernetes.io/secure-backends: "false"
spec:
  tls:
  - hosts:
    - monica.apps.chibifire.com
    secretName: monica-tls
  rules:
  - host: monica.apps.chibifire.com
    http:
      paths:
      - path: /
        backend:
          serviceName: monicahq
          servicePort: 80
